--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "load-remote",
+  "version": "1.0.0",
   "homepage": "https://github.com/cloudcmd/load-remote",
   "authors": [
     "coderaiser <mnemonic.enemy@gmail.com>"
