feature(bower) load-remote -> loadremote

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "load-remote",
+  "name": "loadremote",
   "version": "1.0.0",
   "homepage": "https://github.com/cloudcmd/load-remote",
   "authors": [
