--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loadremote",
   "version": "1.0.0",
   "description": "library for loading modules from cdn or local file system",
-  "main": "lib/load-remote.js",
+  "main": "lib/loadremote.js",
   "dependencies": {
   },
   "devDependencies": {},
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/cloudcmd/load-remote.git"
+    "url": "git://github.com/cloudcmd/loadremote.git"
   },
   "keywords": [
     "load",
@@ -20,7 +20,7 @@
   "author": "coderaiser <mnemonic.enemy@gmail.com> (http://coderaiser.github.io/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cloudcmd/load-remote/issues"
+    "url": "https://github.com/cloudcmd/loadremote/issues"
   },
-  "homepage": "https://github.com/cloudcmd/load-remote"
+  "homepage": "https://github.com/cloudcmd/loadremote"
 }
