--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loadremote",
+  "private": true,
   "version": "1.0.0",
   "description": "library for loading modules from cdn or local file system",
   "main": "lib/loadremote.js",
