--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "loadremote",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "library for loading modules from cdn or local file system",
   "main": "lib/loadremote.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
