--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "1.2.0",
   "description": "library for loading modules from cdn or local file system",
   "main": "lib/loadremote.js",
-  "dependencies": {},
+  "dependencies": {
+    "execon": "^1.2.9",
+    "load.js": "^1.1.4"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
